# my_project_multichain

./: package-lock.json  package.json
client/: 1.0.0  package-lock.json  package.json
client/src/: App.jsx
client/src/components/: navbar_header.jsx
client/src/pages/: ControlBNBPage.jsx  ControlETHPage.jsx  ControlSOLPage.jsx  HomePage.jsx
client/src/styles/: App.css  output.css
rust_smart_contract_SOL/michu-dev/: Anchor.toml
rust_smart_contract_SOL/michu-dev/programs/michu-dev/: Cargo.toml
rust_smart_contract_SOL/michu-dev/programs/michu-dev/src/: lib.rs
solidity_smart_contract_ETH/: package-lock.json  package.json
solidity_smart_contract_ETH/contracts/: ERC20.sol
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/controllers/: admin_controller.rs  mod.rs
src-tauri/src/models/: admin.rs
src-tauri/src/routers/: admin_router.rs  mod.rs
